--- a/Projet 6 - Jeu de Plateau/css/main.css
+++ b/Projet 6 - Jeu de Plateau/css/main.css
@@ -34,13 +34,19 @@ body {
   width: 80px;
   height: 80px;
   border: solid 2px black;
-  background-color: grey;
+  background-color: #444444;
 }
 
 .case {
   width: 80px;
   height: 80px;
   border: solid 2px black;
+}
+
+.deplacement {
+  height: 80px;
+  weight:80px;
+  background-color: lightgrey ;
 }
 
 .joueur1 {
@@ -57,7 +63,7 @@ body {
   background: url('../img/J2min.png') no-repeat top center;
 }
 
-.lance-pierre {
+.lancepierre {
   width: 80px;
   height: 80px;
   border: solid 2px black;
