--- a/Projet 6 - Jeu de Plateau/css/main.css
+++ b/Projet 6 - Jeu de Plateau/css/main.css
@@ -3,7 +3,11 @@ body {
   display: flex;
   justify-content: center;
 }
-
+img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
 #plateau {
   display: flex;
   flex-wrap: wrap;
@@ -43,50 +47,58 @@ body {
   border: solid 2px black;
 }
 
-.deplacement {
+.deplacementPossible {
   height: 80px;
   width:80px;
   background-color: lightgrey ;
 }
 
-.joueur1 {
+div .joueur1 {
   width: 80px;
   height: 80px;
   border: solid 2px black;
   background: url('../img/J1min.png') no-repeat top center;
 }
 
-.joueur2 {
+div .joueur2 {
   width: 80px;
   height: 80px;
   border: solid 2px black;
   background: url('../img/J2min.png') no-repeat top center;
 }
 
-.lancepierre {
+.lance-pierre {
   width: 80px;
   height: 80px;
   border: solid 2px black;
-  background: url('../img/LancePierremin.png') no-repeat top center;
+  background-image: url('../img/LancePierremin.png');
+  background-repeat: no-repeat;
+  background-position: center;
 }
 
 .baguette {
   width: 80px;
   height: 80px;
   border: solid 2px black;
-  background: url('../img/Baguettemin.png') no-repeat top center;
+  background-image: url('../img/Baguettemin.png');
+  background-repeat: no-repeat;
+  background-position: center;
 }
 
 .baton {
   width: 80px;
   height: 80px;
   border: solid 2px black;
-  background: url('../img/Batonmin.png') no-repeat top center;
+  background-image: url('../img/Batonmin.png');
+  background-repeat: no-repeat;
+  background-position: center;
 }
 
 .epee {
   width: 80px;
   height: 80px;
   border: solid 2px black;
-  background: url('../img/Epeemin.png') no-repeat top center;
+  background-image: url('../img/Epeemin.png');
+  background-repeat: no-repeat;
+  background-position: center;
 }
