--- a/css/main.css
+++ b/css/main.css
@@ -39,9 +39,6 @@ body {
   justify-content: center;
   font-family: 'opensans-regular', sans-serif;
 }
-img {
-  display: block;
-}
 
 #plateau {
   display: flex;
@@ -77,7 +74,7 @@ li {
 }
 
 .regles {
-  padding-top: 15px;
+  padding-top: 10px;
   width: 500px;
   height: 305px;
   text-align: justify;
@@ -169,6 +166,7 @@ h1 {
   background-color: #FFF;
   width: 800px;
   overflow: auto;
+  text-align: center;
 }
 
 /* cases */
@@ -205,6 +203,14 @@ div .joueur2 {
   background: url('../img/J2min.png') no-repeat top center;
 }
 
+.restart {
+  padding: 6px 0 6px 0;
+  background: #f5f5f5;
+  border-radius: 2px;
+  width: 200px;
+  border: 1px solid #ccc;
+  margin: 10px 0 10px 0;
+}
 /* armes */
 
 .lance-pierre {
